openshift/docmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: document-app
  template:
    metadata:
      labels:
        app: document-app
    spec:
      containers:
        - name: document-app
          image: docker.io/khalique/document-app:1.7-rag
          command:
            - gunicorn
            - docmanager.wsgi:application
            - --bind
            - 0.0.0.0:8000
            - --workers
            - "1"
            - --worker-tmp-dir
            - /tmp
            - --timeout
            - "60"
            - --access-logfile
            - "-"
            - --error-logfile
            - "-"
            - --capture-output
            - --log-level
            - info
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media
              mountPath: /app/media
          readinessProbe:
            httpGet:
              path: /healthz/
              port: 8000
              httpHeaders:
                - name: Host
                  value: document-app-document-app.apps-crc.testing
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 8000
              httpHeaders:
                - name: Host
                  value: document-app-document-app.apps-crc.testing
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: docmanager-media-pvc
