openshift/docmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: document-app
spec:
  selector:
    app: document-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
