openshift/docmanager-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: document-app
spec:
  host: document-app-document-app.apps-crc.testing
  to:
    kind: Service
    name: document-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
